--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,8 @@
-<div><button>
-    <img/>
-    <span>NAME</span>
-</button></div>
+<div>
+  <button>
+    <button (click)="onSelectUser()">
+      <img [src]="imagePath" [alt]="name" />
+      <span>{{ name }}</span>
+    </button>
+  </button>
+</div>
