--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,20 @@
-<h2>{{name}}</h2>
+@if(isAddingTask){
+    <app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask()"/>
+}
+
+<section>
+    <header>
+        <h2>{{name}}'s Tasks</h2>
+<menu>
+    <button (click)="onStartAddTask()">Add task</button>
+</menu>
+    </header>
+
+    <ul>
+        @for(task of selectedUserTask; track task.id) {
+             <li>
+                <app-task [task]="task" (complete)="onCompleteTask($event)"/>
+             </li>
+        }
+    </ul>
+</section>
